--- a/Server/package.json
+++ b/Server/package.json
@@ -1,5 +1,9 @@
 {
   "name": "Server",
+  "scripts": {
+    "start":"node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "type": "module",
   "version": "1.0.0",
   "main": "index.js",
